--- a/.eslintrc
+++ b/.eslintrc
@@ -4,6 +4,8 @@
     "project": "./tsconfig.json"
   },
   "rules": {
-    "import/prefer-default-export": "off"
+    "import/prefer-default-export": "off",
+    "no-param-reassign": ["error", { "props": false }],
+    "@typescript-eslint/no-unused-vars": "off"
   }
 }
