--- a/.eslintrc
+++ b/.eslintrc
@@ -6,6 +6,7 @@
   "rules": {
     "import/prefer-default-export": "off",
     "no-param-reassign": ["error", { "props": false }],
-    "@typescript-eslint/no-unused-vars": "off"
+    "@typescript-eslint/no-unused-vars": "off",
+    "react/jsx-props-no-spreading": "off"
   }
 }
