--- a/.eslintrc
+++ b/.eslintrc
@@ -7,6 +7,7 @@
     "import/prefer-default-export": "off",
     "no-param-reassign": ["error", { "props": false }],
     "@typescript-eslint/no-unused-vars": "off",
-    "react/jsx-props-no-spreading": "off"
+    "react/jsx-props-no-spreading": "off",
+    "max-len": ["error", { "code": 120, "ignoreStrings": true }]
   }
 }
