--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "web-vitals": "^1.0.1"
   },
   "devDependencies": {
+    "@types/enzyme": "^3.10.10",
     "@types/jest": "^26.0.15",
     "@types/lodash": "^4.14.172",
     "@types/material-ui": "^0.21.9",
@@ -40,6 +41,8 @@
     "@types/styled-components": "^5.1.13",
     "@typescript-eslint/eslint-plugin": "^4.29.3",
     "@typescript-eslint/parser": "^4.29.3",
+    "@wojtekmaj/enzyme-adapter-react-17": "^0.6.5",
+    "enzyme": "^3.11.0",
     "eslint": "^7.2.0",
     "eslint-config-airbnb": "18.2.1",
     "eslint-config-airbnb-typescript": "^14.0.0",
