--- a/package.json
+++ b/package.json
@@ -18,7 +18,7 @@
     "react-redux": "^7.2.4",
     "react-router": "^5.2.1",
     "react-router-dom": "^5.2.1",
-    "react-scripts": "4.0.3",
+    "react-scripts": "5.0.1",
     "redux-logger": "^3.0.6",
     "redux-saga": "^1.1.3",
     "reselect": "^4.0.0",
@@ -27,12 +27,13 @@
     "web-vitals": "^1.0.1"
   },
   "devDependencies": {
+    "@babel/plugin-proposal-private-property-in-object": "^7.21.11",
     "@types/enzyme": "^3.10.10",
     "@types/jest": "^26.0.15",
     "@types/lodash": "^4.14.172",
     "@types/material-ui": "^0.21.9",
     "@types/node": "^12.0.0",
-    "@types/react": "^17.0.0",
+    "@types/react": "18.0.8",
     "@types/react-dom": "^17.0.0",
     "@types/react-redux": "^7.1.18",
     "@types/react-router-dom": "^5.1.8",
@@ -51,6 +52,10 @@
     "eslint-plugin-react": "^7.21.5",
     "eslint-plugin-react-hooks": "^1.7.0",
     "prettier": "^2.3.2"
+  },
+  "resolutions": {
+    "@types/react": "18.0.8",
+    "@types/react-dom": "18.0.3"
   },
   "scripts": {
     "start": "react-scripts start",
